Added party type api
