# backend/typescript/models/relationship.model.ts
@@ -30,11 +30,11 @@ const MAX_PAGE_SIZE = 10;
 
 export class RelationshipStatus extends RAMEnum {
 
-    public static Active = new RelationshipStatus('ACTIVE');
-    public static Cancelled = new RelationshipStatus('CANCELLED');
-    public static Deleted = new RelationshipStatus('DELETED');
-    public static Invalid = new RelationshipStatus('INVALID');
-    public static Pending = new RelationshipStatus('PENDING');
+    public static Active = new RelationshipStatus('ACTIVE', 'Active');
+    public static Cancelled = new RelationshipStatus('CANCELLED', 'Cancelled');
+    public static Deleted = new RelationshipStatus('DELETED', 'Deleted');
+    public static Invalid = new RelationshipStatus('INVALID', 'Invalid');
+    public static Pending = new RelationshipStatus('PENDING', 'Pending');
 
     protected static AllValues = [
         RelationshipStatus.Active,
@@ -44,8 +44,8 @@ export class RelationshipStatus extends RAMEnum {
         RelationshipStatus.Pending
     ];
 
-    constructor(name:string) {
-        super(name);
+    constructor(name:string, decodeText:string) {
+        super(name, decodeText);
     }
 }
 
